Base/Traefik/v2/traefik_cheese_test.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: stilton
  labels:
    app: cheese
    cheese: stilton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheese
      task: stilton
  template:
    metadata:
      labels:
        app: cheese
        task: stilton
        version: v0.0.1
    spec:
      # hostNetwork: true
      containers:
      - name: cheese
        image: errm/cheese:stilton
        ports:
        - containerPort: 80
      # nodeSelector:
      #   kubernetes.io/hostname: "oc2"
      # tolerations:
      # - key: "oc0"
      #   operator: "Exists"
      #   effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: stilton
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: cheese
    task: stilton

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripstilton
spec:
  stripPrefix:
    prefixes:
    - /stilton
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`rudenspavasaris.id.lv`) && PathPrefix(`/stilton`)
    middlewares:
    - name: stripstilton
    kind: Rule
    services:
    - name: stilton
      port: 80
  tls:
    certResolver: default
